@@ -28,6 +28,8 @@ mjb.extensions=AVI DIVX MKV WMV M2TS TS RM QT ISO VOB MPG MOV MP4 M1V M2V M4V M2
 # an additional skin named "sd" is for Standard Definition displays
 mjb.skin.dir=./skins/default
 
+# Number of Days a file is considered for the NEW category
+mjb.newdays=7
 
 ######################################################
 ## Filename scanner
