@@ -5,6 +5,7 @@
 MovieJukebox 1.0.13 beta
 ------------------------
   - Enhancement #76 Addition of a TV logo to TV Series
+  - Enhancement #194 Configurable number of days for "New" Category. 0 (Zero) will disable new category.
   - Fixed defect #202 scanner.skip.keywords problems
   - Fixed defect #217 NFO Scanner now checks the movie folder for NFO files (For VIDEO_TS)
   - Fixed defext #217 NFO scanner now looks for directory.nfo first then specific video.nfo second
